PHOEBE Project ChangeLog:
----------------------------------------------------------------------------

2006-06-20: - RV plotting window was missing "Lum:" entries in the info
              table. Because of that PHOEBE reported "Widget not found"
              issue when RV curves were plotted. Additionally, there was
              a stale printf () debugging statement that printed out the
              filter index to the terminal. All of these problems were
              fixed. Many thanks to Maja Vuckovic for pointing this out!
            - Function plot_rv_plot () has been cleaned a bit upon the
              bug report from Todd Vaccaro. I didn't manage to reproduce
              it here, but I hope that this fool-proofing will help.
2006-06-14: - Fool-proofing done in get_plot_limits_of_data () function.
2006-06-13: - Code beautification done in plot_lc_plot () while searching
              for the segfault problem that was reported. This will now be
              committed to see whether the problem is fixed; there was a
              double free () call that could have been triggered under
              special circumstances (chosen_filter variable not set).
2006-06-12: - File->New connected to the actual reset function. So far the
              menu item didn't do anything, now it calls the default para-
              meter file.
2006-06-11: - Upon request of Petr Harmanec, 3rd light can now be entered
              in percents of total light instead of internal flux units.
              This required a slight modification of the GUI appearence,
              namely the Luminosities tab: the "Edit 3rd light" button has
              been reduced in size and two radio buttons have been added
              with the 3rd light units' choice: percents or flux. In
              adition, several other functions needed to be changed and
              currently a slight confusion exists between light and lumi-